<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Light</string>
    <string name="action_settings">Settings</string>
    <string name="lightButton">Start Light</string>
    <string name="lightOn">Light ON</string>
    <string name="lightOff">Light OFF</string>
	<string name="lockCheck">Lock the light</string>
	<string name="copyleft">Made by Damien for Xia</string>
	<string name="lockStatutOff">Lock OFF</string>
	<string name="lockStatutOn">Lock ON</string>
	<string name="warningButton">Start Warning</string>
	<string name="warningOn">Warning ON</string>
	<string name="warningOff">WarningOff</string>
	<string name="warningValue">500ms</string>
</resources>