<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LightActivity" >

    <Button
        android:id="@+id/lightButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="40sp"
        android:paddingTop="40sp"
        android:text="@string/lightButton"
        android:textSize="40sp" />

    <CheckBox
        android:id="@+id/lockCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/lightButton"
        android:text="@string/lockCheck" />

    <TextView
        android:id="@+id/lockStatut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/lockCheck"
        android:text="@string/lockStatutOff" />

    <Button
        android:id="@+id/warningButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lockStatut"
        android:padding="30sp"
        android:text="@string/warningButton" />

    <TextView
        android:id="@+id/warningValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/warningButton"
        android:text="@string/warningValue" />

    <SeekBar
        android:id="@+id/warningSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/warningValue"
        android:max="9"
        />

    <TextView
        android:id="@+id/copyleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/copyleft" />

</RelativeLayout>